Fix masthead nav alignment selector

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -5,7 +5,7 @@
     display: none !important;
   }
 
-  .masthead__menu-item--lg + .masthead__menu-item a {
-    margin-left: 40rem;
+  .greedy-nav .visible-links {
+    margin-left: 8.2rem;
   }
 }
